fix em templates de projeto pt 1